added find no. of record matched implementation
- added implementation to find out total no. of record(s) matched for
given user provided query if query return result.
- rename the JSF backing bean attribute name and the display message to
reflect the new usage more appopriately

--- a/report-web/src/main/webapp/views/model/model_wizard.xhtml
+++ b/report-web/src/main/webapp/views/model/model_wizard.xhtml
@@ -127,8 +127,8 @@
 									</h:panelGrid>
 									<p:separator />
 									<h:panelGrid columns="3" width="100%">
-										<span style="font-size: x-small">*#{modelWizard.noOfRowsReturned}
-											rows returned.</span>
+										<span style="font-size: x-small">*#{modelWizard.noOfRecordMatched}
+											record(s) matched.</span>
 										<p:ajaxStatus>
 											<f:facet name="start">
 												<h:panelGrid columns="2" style="vertical-align:middle">
