change footer message

--- a/report-web/src/main/webapp/WEB-INF/templates/footer.xhtml
+++ b/report-web/src/main/webapp/WEB-INF/templates/footer.xhtml
@@ -13,5 +13,5 @@
     	}
     </style>
 
-	<p id="copy_right">Copyright © 2014 CenturyLink, Inc. All rights reserved.</p>    
+	<p id="copy_right">demo version and strictly for authors.</p>    
 </ui:composition>
