--- a/report-web/src/main/webapp/views/model/maintain_models.xhtml
+++ b/report-web/src/main/webapp/views/model/maintain_models.xhtml
@@ -34,7 +34,7 @@
 								<h:outputText value="#{node}"/>
 							</p:treeNode>
 						
-							<p:treeNode type="modelNode">
+							<p:treeNode type="modelNode" icon="ui-icon-gear">
 								<h:outputText value="#{node.name}"/>
 							</p:treeNode>
 							
@@ -53,8 +53,9 @@
 									<p:ajax event="dialogReturn" listener="#{maintainModel.onDialogReturn}" />
 								</p:commandButton>
 								<p:spacer width="5px" />
-								<p:commandButton value="Delete" icon="ui-icon-trash" action="#{maintainModel.deleteModel('8')}">
-									<p:confirm header="Confirmation" message="Are you sure you want to delete?" icon="ui-icon-alert" />
+								<p:commandButton value="Delete" icon="ui-icon-trash" action="#{maintainModel.deleteModel}" 
+												 update=":mainForm:tree,:mainForm:viewModelDetailPanel">
+									<p:confirm header="Confirmation" message="Are you sure you want to delete model?" icon="ui-icon-alert"/>
 								</p:commandButton>
 							</f:facet>
 
@@ -123,6 +124,10 @@
 					</p:layoutUnit>
 				</p:layout>
 			</p:panel>
+			<p:confirmDialog global="true">
+				<p:commandButton value="Yes" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" type="button"/>  
+   				<p:commandButton value="No" styleClass="ui-confirmdialog-no" icon="ui-icon-close" type="button"/>
+			</p:confirmDialog>
 		</h:form>
 	</ui:define>
 </ui:composition>
