--- a/report-web/src/main/webapp/views/model/maintain_models.xhtml
+++ b/report-web/src/main/webapp/views/model/maintain_models.xhtml
@@ -55,7 +55,7 @@
 								<p:spacer width="5px" />
 								<p:commandButton value="Delete" icon="ui-icon-trash" action="#{maintainModel.deleteModel}" 
 												 update=":mainForm:tree,:mainForm:viewModelDetailPanel">
-									<p:confirm header="Confirmation" message="Are you sure you want to delete model?" icon="ui-icon-alert"/>
+									<p:confirm header="Confirmation" message="Are you sure you want to delete current model?" icon="ui-icon-alert"/>
 								</p:commandButton>
 							</f:facet>
 
