--- a/report-web/src/main/webapp/views/model/maintain_models.xhtml
+++ b/report-web/src/main/webapp/views/model/maintain_models.xhtml
@@ -6,30 +6,37 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:reporte="http://java.sun.com/jsf/composite/components">
 
-	<ui:param name="show_west" value="false" />
-	<ui:param name="show_east" value="false" />
-
-	<ui:define name="title">Report - Maintain Models</ui:define>
-
 	<ui:define name="content">
+		
+		
+		
 		<h:form id="mainForm">
-			<p:panel header="Maintain Models">
-				<p:messages autoUpdate="true" closable="true"/>
-				<p:layout style="min-height:599px;">
-					<p:layoutUnit position="west" header="Models" collapsible="false"
-						resizable="true" size="244" minSize="200" maxSize="300"
-						style="height:50%;">
+		
+		
+		
+<!-- 			<p:panel header="Maintain Models"> -->
+			
+			
+				<p:layout widgetVar="layoutWdgtContent">
+				
+				
+<!-- 					<p:layoutUnit position="west" header="Models" collapsible="false" -->
+<!-- 						resizable="true" size="244" minSize="200" maxSize="300" -->
+<!-- 						style="height:50%;"> -->
+						
+					<p:layoutUnit id="centerWest" position="west" size="275" collapsible="true" effect="drop" styleClass="center-west-layout">
+						
 						<h:panelGrid style="text-align:center;" columns="2">
 							<p:autoComplete placeholder="Filter.." size="26" />
 							<p:commandLink title="Add New Model" action="#{maintainModel.addModel}" >
-								<p:ajax event="dialogReturn" listener="#{maintainModel.onDialogReturn}" update=":mainForm:tree,:mainForm:viewModelDetailPanel"/>
+<!-- 								<p:ajax event="dialogReturn" listener="#{maintainModel.onDialogReturn}" update=":mainForm:tree,:mainForm:viewModelDetailPanel"/> -->
 								<h:graphicImage library="default" name="images/addnew-icon.png" height="25" />
 							</p:commandLink>
 						</h:panelGrid>
 
 						<p:tree id="tree" value="#{maintainModel.modelTreeRoot}" var="node" selectionMode="single" 
 								selection="#{maintainModel.selectedNode}">
-							<p:ajax event="select" process="@form" update=":mainForm:viewModelDetailPanel" listener="#{maintainModel.onNodeSelect}"/>
+<!-- 							<p:ajax event="select" process="@form" update=":mainForm:viewModelDetailPanel" listener="#{maintainModel.onNodeSelect}"/> -->
 							<p:treeNode icon="ui-icon-disk">
 								<h:outputText value="#{node}"/>
 							</p:treeNode>
@@ -39,9 +46,11 @@
 							</p:treeNode>
 							
 						</p:tree>
+						
 					</p:layoutUnit>
 
-					<p:layoutUnit position="center" style="height:410px;">
+					<p:layoutUnit id="centerCenter" position="center" styleClass="center-center-layout">
+					
 						<p:breadCrumb style="width:99%;border:none;background:none;">
 							<p:menuitem value="Categories" url="/views/home.xhtml" />
 							<p:menuitem value="Maintain Models"
@@ -121,13 +130,34 @@
 								</p:tab>
 							</p:tabView>
 						</p:panel>
+						
+						
 					</p:layoutUnit>
+					
+					
 				</p:layout>
-			</p:panel>
-			<p:confirmDialog global="true">
+				
+				
+				
+<!-- 			</p:panel> -->
+			
+			
+			
+			
+<p:confirmDialog global="true">
 				<p:commandButton value="Yes" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" type="button"/>  
    				<p:commandButton value="No" styleClass="ui-confirmdialog-no" icon="ui-icon-close" type="button"/>
 			</p:confirmDialog>
+
+			
+			
+			
+			
+			
 		</h:form>
+		
+		
+		
+		
 	</ui:define>
 </ui:composition>
