--- a/report-web/src/main/webapp/WEB-INF/templates/header.xhtml
+++ b/report-web/src/main/webapp/WEB-INF/templates/header.xhtml
@@ -30,7 +30,7 @@
 
 	<p:panel styleClass="north-panel">
 		<f:facet name="header">
-			<h:graphicImage library="default" name="images/reporte_logo.png"/>
+			<h:graphicImage library="default" name="images/reporte.gif"/>
 		</f:facet>
 		<f:facet name="actions">
 			<ui:include src="menu_bar.xhtml" />
