--- a/report-web/src/main/webapp/views/model/maintain_models.xhtml
+++ b/report-web/src/main/webapp/views/model/maintain_models.xhtml
@@ -49,7 +49,7 @@
 			
 			<p:layoutUnit id="centerCenter" position="center" styleClass="center-center-layout">
 			
-				<p:panelGrid columns="1" styleClass="container-grid">
+				<p:panelGrid columns="1" styleClass="container-grid" style="border:none!important;">
 			
 					<h:form id="centerForm">
 				
@@ -102,7 +102,8 @@
 												<h:outputText value="#{maintainModel.modelTableName}" />
 											</h:panelGroup>
 										</h:panelGrid>
-										<p:dataTable value="#{maintainModel.model.attributeBindings}" var="row" border="1" style="width:80%">
+										<p:dataTable value="#{maintainModel.model.attributeBindings}" var="row" 
+													 style="width:80%;" styleClass="model-attribute-table">
 											<p:columnGroup type="header">
 												<p:row>
 													<p:column rowspan="2" headerText="Attribute Name" style="font-size:10pt!important;"/>
