--- a/report-web/src/main/webapp/views/model/maintain_models.xhtml
+++ b/report-web/src/main/webapp/views/model/maintain_models.xhtml
@@ -39,11 +39,11 @@
 						</p:breadCrumb>
 						<p:panel header="View Model Details" style="">
 							<f:facet name="footer">
-								<p:commandButton value="Edit" icon="ui-icon-wrench" action="#{myBean.updateModel('8')}">
+								<p:commandButton value="Edit" icon="ui-icon-wrench" action="#{myBean.updateModel(myBean.model.id)}">
 									<p:ajax event="dialogReturn" listener="#{myBean.onDialogReturn}" />
 								</p:commandButton>
 								<p:spacer width="5px" />
-								<p:commandButton value="Delete" icon="ui-icon-trash" action="#{myBean.deleteModel('8')}">
+								<p:commandButton value="Delete" icon="ui-icon-trash" action="#{myBean.deleteModel(myBean.model.id)}">
 									<p:confirm header="Confirmation" message="Are you sure you want to delete?" icon="ui-icon-alert" />
 								</p:commandButton>
 							</f:facet>
@@ -73,7 +73,7 @@
 											</h:panelGroup>
 										</h:panelGrid>
 
-										<p:dataTable value="#{myBean.model.bindings}" var="row"
+										<p:dataTable value="#{myBean.model.attributeBindings}" var="row"
 											border="1" style="width:50%">
 											<p:columnGroup type="header">
 												<p:row>
@@ -82,10 +82,10 @@
 												</p:row>
 											</p:columnGroup>
 											<p:column>
-												<h:outputText value="#{row.attributeName}" />
+												<h:outputText value="#{row.alias}" />
 											</p:column>
 											<p:column>
-												<h:outputText value="#{row.tableName}.#{row.columnName}" />
+												<h:outputText value="#{row.referencedColumn}" />
 											</p:column>
 										</p:dataTable>
 									</h:panelGrid>
